<resources>
    <string name="app_name">CaposBackground</string>
    <string name="service_running">HTTP server running</string>
    <string name="channel_name">HTTP Server</string>
    <string name="channel_description">Shows when the mobile HTTP server is running in the background.</string>
    <string name="start_server">Start HTTP server</string>
    <string name="stop_server">Stop HTTP server</string>
    <string name="server_url">Server URL (same network):</string>
    <string name="server_stopped">Server stopped. Start to receive HTTP requests.</string>
    <string name="copy_url">Copy URL</string>
    <string name="url_copied">URL copied to clipboard</string>
    <string name="select_printer_config">Select printer_ips.json</string>
    <string name="printer_config_selected">Using config from selected file (e.g. Download/CaposBackground)</string>
    <string name="printer_config_selected_temporary">Config loaded for now (permission not persisted)</string>
    <string name="printer_config_select_failed">Could not read selected config file</string>
</resources>